--- a/_posts/2014-02-06-hi.md
+++ b/_posts/2014-02-06-hi.md
@@ -4,6 +4,8 @@ title: Hi
 category: posts
 ---
 
-Finnally I find time to change the layouts of my github blog and make it more beautiful. Jekyll and bootstrap are good things. I wish my writing and coding better and better and I could finish my game project on time and study Janpanese well.
+Finnally I find time to change the layouts of my github blog and make it more beautiful. Jekyll and bootstrap are good things. I wish my writing and coding better and better and I could finish my game project on time and study Japanese well.
 
 I love emacs and github.
+
+The songs in <Frozen> are so amazing. Let it go!
