--- a/_posts/2014-02-06-hi.md
+++ b/_posts/2014-02-06-hi.md
@@ -8,4 +8,4 @@ Finnally I find time to change the layouts of my github blog and make it more be
 
 I love emacs and github.
 
-The songs in <Frozen> are so amazing. Let it go!
+The songs in Frozen are so amazing. Let it go!
