correct wrong words

--- a/_posts/2014-02-07-friday.md
+++ b/_posts/2014-02-07-friday.md
@@ -5,7 +5,7 @@ category: posts
 ---
 
 It's Friday today! Gesus! I had been thinking it as Thursday all day
-long. So weekend is coming. Times flies!
+long. So weekend is coming. Time flies!
 
 However, I have a lot of things to do. I need more time to work on my
 project.
